# mnist-ml

./: .gitignore  CMakeLists.txt  Makefile  Notes.md  README.md  add_new_model.sh  out
KMEANS/: Makefile  main
KMEANS/include/: kmeans.hpp
KMEANS/src/: kmeans.cpp
KNN/: Makefile  main
KNN/include/: knn.hpp
KNN/src/: knn.cpp
include/: commom.hpp  data.hpp  data_handler.hpp
src/: common.cpp  data.cpp  data_handler.cpp  hello.cpp
